# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_test.yaml  codeql.yml
include/: day_1.hxx
include/advent_of_code/: day_1.hxx  day_2.hxx  day_3.hxx  day_4.hxx  day_5.hxx  day_6.hxx  day_7.hxx  day_8.hxx  day_9.hxx
solutions/: CMakeLists.txt  day_1.cxx  day_2.cxx  day_3.cxx  day_4.cxx  day_5.cxx  day_6.cxx  day_7.cxx  day_8.cxx  day_9.cxx
src/: day_1.cxx  day_2.cxx  day_3.cxx  day_4.cxx  day_5.cxx  day_6.cxx  day_7.cxx  day_8.cxx  day_9.cxx
tests/: CMakeLists.txt  test_day_1.cxx  test_day_2.cxx  test_day_3.cxx  test_day_4.cxx  test_day_5.cxx  test_day_6.cxx  test_day_7.cxx  test_day_8.cxx  test_day_9.cxx
tests/data/: day_2_2.txt  day_3_3.txt  day_4_2.txt  day_8_2.txt
